<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OmniSwitch</string>
    <string name="status_bar_recent_remove_item_title">Stop</string>
    <string name="package_inspect_item_title">App info</string>
    <string name="recents_settings_title">OmniSwitch</string>
    <string name="start_on_boot_title">Start on boot</string>
    <string name="start_on_boot_summary">Start and enable on device boot</string>
    <string name="opacity_title">Opacity</string>
    <string name="opacity_summary">Background opacity of overlay view</string>
    <string name="animate_title">Animate</string>
    <string name="animate_title_summary">Animate show and hide of overlay view</string>
    <string name="adjust_handle_title">Position and size</string>
    <string name="sc_drag_handle_title">Drag handle</string>
    <string name="sc_drag_handle_body">"
Swipe horizontally to open

Press button or outside to close

Long press to open quick switcher"</string>
    <string name="sc_favorite_title">Favorite apps</string>
    <string name="sc_favorite_body">"
Open favorite apps view."</string>
    <string name="icon_size_normal">Normal</string>
    <string name="icon_size_small">Small</string>
    <string name="icon_size_large">Large</string>
    <string name="icon_size_title">Icon size</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="drag_handle_color_title">Color</string>
    <string name="drag_handle_color_dialog_title">Color</string>
    <string name="service_background_processes">%1$s free</string>
    <string name="service_foreground_processes">%1$s used</string>
    <string name="show_rambar_title">Show memory usage</string>
    <string name="show_rambar_summary">Display amount of free and used memory</string>
    <string name="show_app_labels">Show app name</string>
    <string name="show_app_labels_summary">Application name will be displayed with the icon</string>
    <string name="category_overlay_title">Overlay</string>
    <string name="category_drag_handle_title">Drag handle</string>
    <string name="category_favorite_title">Favorites</string>
    <string name="favorite_apps_config_title">Manage favorites</string>
    <string name="favorite_apps_config_summary">Define apps shown in favorites view</string>
    <string name="favorite_apps_add_dialog_title">Add apps</string>
    <string name="favorite_add">Add…</string>
    <string name="location_left">&lt;&lt;</string>
    <string name="location_right">>></string>
    <string name="reset">Default</string>
    <string name="toogle_last_app_help">Switch to last app</string>
    <string name="kill_all_apps_help">Kill all apps</string>
    <string name="kill_other_apps_help">Kill other apps</string>
    <string name="settings_help">Settings</string>
    <string name="home_help">Home</string>
    <string name="toogle_last_app">Switch to last app</string>
    <string name="kill_all_apps">Kill all</string>
    <string name="kill_other_apps">Kill other</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="buttons_title">Buttons</string>
    <string name="buttons_summary">Configure action buttons in overlay view</string>
    <string name="auto_hide_handle">Auto-hide</string>
    <string name="auto_hide_handle_summary">Two swipes to show overlay view</string>
    <string name="no_recent_apps_title">No recent apps</string>
    <string name="drag_handle_opacity_title">Opacity</string>
    <string name="drag_handle_enable_title">Enable</string>
    <string name="drag_handle_enable_summary">Disable only if you use another activation method</string>
    <string name="allapps_help">App drawer</string>
    <string name="allapps">App drawer</string>
    <string name="dim_behind_title">Dim background</string>
    <string name="dim_behind_summary">Apply opacity to complete screen</string>
    <string name="gravity_title">Horizontal gravity</string>
    <string name="gravity_center">Center</string>
    <string name="gravity_drag">Drag handle side</string>
    <string name="dialog_pick_iconpack_title">Pick icon pack</string>
    <string name="default_iconpack_title">Default icons</string>
    <string name="icon_packs_title">Icon packs</string>
    <string name="no_iconpacks_summary">No icon packs installed</string>
    <string name="icon_pack_title">Icon pack</string>
    <string name="icon_pack_summary">Use icon pack for app icons</string>
    <string name="category_speed_switcher_title">Quick Switcher</string>
    <string name="speed_switcher_enable_summary">Long press drag handle to activate</string>
    <string name="speed_switcher_enable_title">Enable</string>
    <string name="back">Back</string>
    <string name="back_help">Back</string>
    <string name="kill_current">Kill current</string>
    <string name="kill_current_help">Kill current app</string>
    <string name="speed_switch_color_summary">Blue -recent apps. Green - favorites. Red - actions</string>
    <string name="speed_switch_color">Level background colors</string>
    <string name="speed_switch_limit_summary">Limit area for level changes</string>
    <string name="speed_switch_limit">Level change area</string>
    <string name="speed_switch_button_title">Buttons</string>
    <string name="speed_switch_button_summary">Configure action buttons in quick switcher view</string>
    <string name="speed_switch_items_summary">Maximum number of level items</string>
    <string name="speed_switch_item">Level item limit</string>
    <string name="sc_quick_switcher_title">Quick switcher</string>
    <string name="sc_quick_switcher_body">"
Moving up and down to switch between levels.

Moving left and right to switch between level items."</string>
    <string name="sc_quick_switcher_empty_body">"
No recent apps or favorites.

Moving up and down to switch between levels.

Moving left and right to switch between level items."</string>
    <string name="immersive_mode">Immersive mode</string>
    <string name="immersive_mode_help">Toggle immersive mode</string>
    <string name="package_add_favorite_title">Add to favorites</string>
    <string name="package_remove_favorite_title">Remove from favorites</string>
    <string name="flat_style_summary">Use solid background for overlay view</string>
    <string name="flat_style_title">Flat style</string>
</resources>
